Fixed footer at all pages, many small fixes

--- a/support_ua.html
+++ b/support_ua.html
@@ -11,12 +11,14 @@
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" type="image/png">
     <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Template Main CSS File -->
     <link href="assets/css/my_style.css" rel="stylesheet">
 </head>
 <body>
-<section id="background_section" data-speed="2" data-type="background">
+
 <header>
     <div class="navbar-wrapper">
         <nav class="navbar navbar-inverse navbar-static-top">
@@ -55,6 +57,7 @@
 
 
 <main>
+    <section id="background_section" data-speed="2" data-type="background">
     <div class="container">
         <hr class="featurette-divider">
          <div class="col-lg-5">
@@ -68,12 +71,60 @@
         </div>
         <hr class="featurette-divider">
     </div>
+    </section>
 </main>
 
-<footer>
+<div class="navbar-wrapper">
+  <footer class="text-center text-lg-start text-white" style="background-color: #101010">
 
-</footer>
-</section>
+    <div class="container p-4 pb-0">
+
+      <section class="">
+        <div class="col-md-12">
+            <div class="row">
+            <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mt-3">
+
+                <h6 class="text-uppercase mb-4 font-weight-bold" style="color: white;">
+                  Мета
+                </h6>
+
+                <p style="color: white;">
+                  Робота була виконана в якості проекту на предмет Front-end розробки, та отримання достатньої кількості баллів.
+                </p>
+
+            </div>
+            <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold text-white" style="color: white;">Contact</h6>
+            <p style="color: white;"><i class="bi bi-house"></i> Новомосковськ, Україна</p>
+            <p style="color: white;"><i class="bi bi-envelope"></i> anton.mitchenko2003@gmail.com</p>
+            <p style="color: white;"><i class="bi bi-telephone"></i> + 380 661 672 867</p>
+            <p style="color: white;"><i class="bi bi-telephone"></i> + 380 638 960 336</p>
+            </div>
+            <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 font-weight-bold" style="color: white;">Follow us</h6>
+
+                <div class="btn btn-primary_info_linkedin btn-circle" href="https://ua.linkedin.com/in/anton-mitchenko">
+                  <i class="fa  fa-linkedin"></i>
+                </div>
+
+                <div class="btn btn-primary_info_instagram btn-circle" href="https://instagram.com/askold.l">
+                  <i class="fa fa-instagram"></i>
+                </div>
+            </div>
+            </div>
+        </div>
+      </section>
+
+    </div>
+
+    <div style="color: white;">
+      © 2023 Copyright:
+      <a class="text-white" href="https://github.com/AntonMitchenko">Мітченко Антон КМ-03</a>
+    </div>
+
+  </footer>
+</div>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
