--- a/runes.html
+++ b/runes.html
@@ -60,7 +60,7 @@
 
 <main class="runes">
     <section id="background_section" data-speed="2" data-type="background">
-        <div class="container container-runes">
+        <div class="container">
             <div class="row">
                 <div class="col-md-7">
                     <h2 class="featurette-heading">Руни <span class="text-muted">It'll blow your mind.</span></h2>
@@ -342,16 +342,14 @@
 </main>
 
 <div class="navbar-wrapper">
-
   <footer class="text-center text-lg-start text-white" style="background-color: #101010">
 
     <div class="container p-4 pb-0">
 
       <section class="">
-
-        <div class="row">
-
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+        <div class="col-md-12">
+            <div class="row">
+            <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mt-3">
 
                 <h6 class="text-uppercase mb-4 font-weight-bold" style="color: white;">
                   Мета
@@ -362,33 +360,29 @@
                 </p>
 
             </div>
-
-          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+            <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold text-white" style="color: white;">Contact</h6>
             <p style="color: white;"><i class="bi bi-house"></i> Новомосковськ, Україна</p>
             <p style="color: white;"><i class="bi bi-envelope"></i> anton.mitchenko2003@gmail.com</p>
             <p style="color: white;"><i class="bi bi-telephone"></i> + 380 661 672 867</p>
             <p style="color: white;"><i class="bi bi-telephone"></i> + 380 638 960 336</p>
-          </div>
+            </div>
+            <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 font-weight-bold" style="color: white;">Follow us</h6>
 
+                <div class="btn btn-primary_info_linkedin btn-circle" href="https://ua.linkedin.com/in/anton-mitchenko">
+                  <i class="fa  fa-linkedin"></i>
+                </div>
 
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-            <h6 class="text-uppercase mb-4 font-weight-bold" style="color: white;">Follow us</h6>
-
-        <div class="btn btn-primary_info_linkedin btn-circle" href="https://ua.linkedin.com/in/anton-mitchenko">
-          <i class="fa  fa-linkedin"></i>
+                <div class="btn btn-primary_info_instagram btn-circle" href="https://instagram.com/askold.l">
+                  <i class="fa fa-instagram"></i>
+                </div>
+            </div>
+            </div>
         </div>
-
-        <div class="btn btn-primary_info_instagram btn-circle" href="https://instagram.com/askold.l">
-          <i class="fa fa-instagram"></i>
-        </div>
-        </div>
-        </div>
-
       </section>
 
     </div>
-
 
     <div style="color: white;">
       © 2023 Copyright:
